fix: Skin: Never show scrollbarbuttons when using scheme skinned scrollbars
(integrated from master branch change 773db79 by Nathan Rijksen <nathanr@activestate.com>)

--- a/src/chrome/komodo/skin/partials/scheme-skinning.less
+++ b/src/chrome/komodo/skin/partials/scheme-skinning.less
@@ -160,6 +160,11 @@ scintilla scrollbar
         background: @background-scrollbar-thumb-hover !important;
     }
     
+    scrollbarbutton
+    {
+        visibility: collapse;
+    }
+    
     &[orient="horizontal"] thumb
     {
         min-width: 25px;
